--- a/Diplom_popitka1/Views/Home/About_company.cshtml
+++ b/Diplom_popitka1/Views/Home/About_company.cshtml
@@ -9,7 +9,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .container {
+        .mcontainer {
             position: relative;
             text-align: left;
             color: white;
@@ -91,7 +91,7 @@
 <body>
  
     <div class="mainContent">
-      <div class="container">
+      <div class="mcontainer">
         <img src="https://atvexpert.ru/upload/iblock/78d/vpg6yql4di25jy6a6xjk3angsw2dxpre.jpg" alt="Эндуро-мотоцикл" class="image">
         <div class="text">Сервисный центр SLOT по ремонту эндуро в Казани</div>
         <div class="button">
