--- a/Diplom_popitka1/Views/Shared/_Layout.cshtml
+++ b/Diplom_popitka1/Views/Shared/_Layout.cshtml
@@ -46,11 +46,11 @@
            
         </ul>
     </header>
-    <div class="container">
+    @*<div class="container">*@
         <main role="main" >
             @RenderBody()
         </main>
-    </div>
+    @*</div>*@
 
    @* <footer class="border-top footer text-muted">
         <div class="container">
