вкладки добавила и дизайн настроила

--- a/Diplom_popitka1/Views/Home/About_company.cshtml
+++ b/Diplom_popitka1/Views/Home/About_company.cshtml
@@ -3,16 +3,13 @@
 *@
 @{
 }
-<!DOCTYPE html>
-<html lang="ru">
-    <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         .mcontainer {
             position: relative;
             text-align: left;
             color: white;
+            width:100%;
         }
 
         .image {
@@ -87,8 +84,8 @@
 
        
     </style>
-</head>
-<body>
+
+
  
     <div class="mainContent">
       <div class="mcontainer">
@@ -127,6 +124,7 @@
                 position: relative;
                 align-items:center;
                 margin:0 auto;
+                margin-bottom:100px;
             }
             .gallery {
                 display: flex;
@@ -249,5 +247,3 @@
             </script>
 
     </div>
-</body>
-</html>
