--- a/Diplom_popitka1/Views/Shared/_Layout.cshtml
+++ b/Diplom_popitka1/Views/Shared/_Layout.cshtml
@@ -43,7 +43,8 @@
         <ul id="navbar">
             <li><a href="@Url.Action("Index", "Home")">Главная</a></li>
             <li><a href="@Url.Action("About_company", "Home")">О компании</a></li>
-           
+            <li><a href="@Url.Action("Requarments", "Home")">Заявки</a></li>
+            <li><a href="@Url.Action("AddMoto", "Home")">Аккаунт+</a></li>
         </ul>
     </header>
     @*<div class="container">*@
