прибавила кое-что

--- a/Diplom_popitka1/Views/Home/About_company.cshtml
+++ b/Diplom_popitka1/Views/Home/About_company.cshtml
@@ -76,17 +76,8 @@
             font-weight:bold;
         }
 
-
-
-
-
-
-
-       
     </style>
 
-
- 
     <div class="mainContent">
       <div class="mcontainer">
         <img src="https://atvexpert.ru/upload/iblock/78d/vpg6yql4di25jy6a6xjk3angsw2dxpre.jpg" alt="Эндуро-мотоцикл" class="image">
@@ -104,9 +95,44 @@
         и новейшее оборудование, чтобы гарантировать, что ваш мотоцикл будет отремонтирован 
         в соответствии с наивысшими стандартами.
        </label>
-
-
+    <h3 style="color:white;background:#252424;margin:0px;padding:10px;">Почему мы?</h3>
+    <table style="background:#252424; width:100%;margin-bottom:200px;">
+        
+        <tr>
+            <td>
+                <img src="~/images/message1.png" style="width:50px;margin:20px;"/>
+            </td>
+            <td style="width:70%;">
+                <label style="color:white;margin:40px;font-size:20px;">Мы стремимся предоставлять исключительное обслуживание клиентов и всегда готовы ответить на любые ваши 
+                    вопросы или помочь советом.</label>
+            </td>
+            <td rowspan="3">
+                <img src="~/images/phot.jpg" style="width:220px;margin:20px;"/>
+            </td>
+            </tr>
+        <tr>
+            <td>
+                <img src="~/images/oclock1.png" style="width:50px;margin:20px;" />
+            </td>
+            <td style="width:70%;">
+                <label style="color:white;margin:40px;font-size:20px;">Мы предлагаем гибкие часы работы, чтобы вам было удобно обслуживать ваш мотоцикл</label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="~/images/remont1.png" style="width:50px;margin:20px;" />
+            </td>
+            <td style="width:70%;">
+                <label style="color:white;margin:40px;font-size:20px;">
+                    Независимо от того, нужна ли вашему эндуро-мотоциклу небольшая настройка или капитальный ремонт, мы здесь,
+                    чтобы помочь. Доверьтесь нам и позвольте нам сохранить ваш мотоцикл в идеальном состоянии!</label>
+            </td>
+        </tr>
+           </table>
         <style>
+        td:nth-child(3) {
+            width: 100%;
+        }
             body {
                 font-family: 'Roboto', sans-serif;
                 background-color: #f4f4f4;
