--- a/Diplom_popitka1/Views/Home/Index.cshtml
+++ b/Diplom_popitka1/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
     
 }
-<a href="@Url.Action("RegButton_Click","Home")" onclick="redirectToAuthorization()">
+<a href="@Url.Action("RegButton_Click","Client")" onclick="redirectToAuthorization()">
    <input type="button" value="Перейти на регистрацию>"/>
 </a>
 <a href="@Url.Action("AuthButton_Click","Home")" onclick="redirectToAuthorization()">
