--- a/Diplom_popitka1/Views/Client/AddMoto.cshtml
+++ b/Diplom_popitka1/Views/Client/AddMoto.cshtml
@@ -109,11 +109,28 @@
     <p><strong style="margin-left:20px;">@loginClient?.Telephone</strong></p>
     <section class="mycontainer">
         
-        
+        <script>
+            function displayErrorMessage(message) {
+                const errorContainer = document.getElementById('error-container');
+                errorContainer.innerText = message; // Отображение сообщения об ошибке
+                errorContainer.style.display = 'block'; // Показать контейнер с ошибкой
+            }
+            document.getElementById('myForm').addEventListener('submit', function (event) {
+                event.preventDefault();
+                const year = document.getElementById('year');
+
+                if (year.value === '') {
+                    displayErrorMessage('Поле не может быть пустым.');
+                } else {
+                    // Здесь можно добавить код для отправки формы или выполнения других действий
+                    console.log('Форма успешно отправлена!');
+                }
+            });
+        </script>
                     
          @if (mot != null)
          {
-            <form action="@Url.Action("EditMoto","Home")" method="post" enctype="multipart/form-data">
+            <form action="@Url.Action("EditMoto","Client")" method="post" enctype="multipart/form-data" id="myForm">
                 <div class="imageForm">
                     <table>
                         <tr>
@@ -134,6 +151,32 @@
                             <td>
                                 <table>
                                     <tr>
+                                        <td><label for="model" class="labelContainer">Марка:</label></td>
+                                        <td>
+                                            <select name="model" id="model">
+                                                @foreach (var modele in motoList)
+                                                {
+                                                    <option value="@modele.Model">@modele.Model</option>
+                                                }
+                                            </select>
+                                           
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><label for="year" class="labelContainer">Год выпуска:</label></td>
+                                        <td>
+                                            <input type="text" name="year" id="year" class="inpMoto" value="@mot.YearRelease?.Year" />
+                                            <span asp-validation-for="@mot.YearRelease" class="text-danger"></span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><label for="mileage" class="labelContainer">Пробег:</label></td>
+                                        <td>
+                                            <input type="number" name="mileage" id="mileage" class="inpMoto" value="@mot.Mileage" />
+                                            <span asp-validation-for="@mot.Mileage" class="text-danger"></span>
+                                         </td>
+                                            @* <table>
+                                    <tr>
                                         <td> <label for="fullname" class="labelContainer">Марка:</label></td>
                                         <td>
                                             <select name="model" id="model">
@@ -151,7 +194,7 @@
                                     </tr>
                                     <tr>
                                         <td> <label for="mileage" class="labelContainer">Пробег:</label></td>
-                                        <td>  <input type="number" name="mileage" id="mileage" class="inpMoto" value="@mot.Mileage" /></td>
+                                        <td>  <input type="number" name="mileage" id="mileage" class="inpMoto" value="@mot.Mileage" /></td>*@
                                     </tr>
                                    
                                 </table>
@@ -161,10 +204,15 @@
                     <button type="submit" class="btn1">Сохранить</button>
                 </div>
             </form>
+            @section Scripts {
+            @{
+                    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+                }
+        }
          }
          else
          {
-                            <form action="@Url.Action("AddMoto","Home")" method="post" enctype="multipart/form-data">
+                            <form action="@Url.Action("AddMoto","Client")" method="post" enctype="multipart/form-data">
                                 <div class="imageForm">
                                     <table>
                                         <tr>
